<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/constraint_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/imageview_hero"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/content_description_hero_image"
    android:fitsSystemWindows="false"
    android:scaleType="centerCrop"
    app:srcCompat="@drawable/beauty_and_the_beast_large" />

  <ImageView
    android:id="@+id/imageview_poster"
    android:layout_width="0dp"
    android:layout_height="150dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:contentDescription="@string/content_description_poster"
    app:srcCompat="@drawable/batb_poster" />

  <TextView
    android:id="@+id/textview_movie_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:text="@string/template_movie_title"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    tools:text="Beauty and the Beast" />

  <TextView
    android:id="@+id/textview_movie_details"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/template_movie_details"
    tools:text="March 2017 PG 129 minutes" />

  <Button
    android:id="@+id/button_rent"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="8dp"
    android:text="@string/rent"
    tools:text="RENT FROM R29,99" />

  <Button
    android:id="@+id/button_buy"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="8dp"
    android:text="@string/buy"
    tools:text="BUY FROM R127,99" />

  <ImageButton
    android:id="@+id/button_add_to_playlist"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:background="@null"
    android:contentDescription="@string/content_description_add_playlist"
    app:srcCompat="@drawable/ic_bookmark" />

  <View
    android:id="@+id/view_divider"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:layout_marginTop="16dp"
    android:background="@color/gray_divider" />

  <com.bestsecret.constraintlayout.RatingView
    android:id="@+id/fab_type_movie"
    android:layout_width="56dp"
    android:layout_height="56dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="32dp"
    android:clickable="true"
    android:focusable="true"
    app:rating="4.5" />

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab_type"
    android:layout_width="56dp"
    android:layout_height="56dp"
    android:layout_marginTop="32dp"
    android:clickable="true"
    android:focusable="true"
    app:srcCompat="@drawable/ic_family" />

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab_rotten_tomato"
    android:layout_width="56dp"
    android:layout_height="56dp"
    android:layout_marginTop="32dp"
    android:clickable="true"
    android:focusable="true"
    app:backgroundTint="#FFF9C4"
    app:srcCompat="@drawable/tomato" />

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab_similar"
    android:layout_width="56dp"
    android:layout_height="56dp"
    android:layout_marginTop="32dp"
    android:clickable="true"
    android:focusable="true"
    app:srcCompat="@drawable/ic_similar" />

  <TextView
    android:id="@+id/textview_rating"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/template_number_ratings"
    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

  <TextView
    android:id="@+id/textview_genre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/template_movie_genre"
    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

  <TextView
    android:id="@+id/textview_tomatio_rating"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/template_rotten_tomato_rating"
    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

  <TextView
    android:id="@+id/textview_similarheading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/template_similar"
    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

  <View
    android:id="@+id/view_divider_below"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:layout_marginTop="8dp"
    android:background="@color/gray_divider" />

  <TextView
    android:id="@+id/textview_description"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:fontFamily="sans-serif"
    android:paddingBottom="16dp"
    android:text="@string/template_movie_description"
    android:textAlignment="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    android:textSize="18sp" />
</android.support.constraint.ConstraintLayout>
